// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityItem.vue renders when all data is passed 1`] = `
<div
  class="activity-item"
>
  <img
    class="avatar"
    src="Avatar"
  />
  <div
    class="member-login flex font-bold items-center justify-start text-xl"
  >
    <a
      class="link"
      href="https://github.com/Login"
      target="_blank"
    >
      Login
    </a>
  </div>
  <div
    class="latest-event-container"
  >
    <div
      class="latest-event-date gap-2 grid grid-columns-manual justify-between w-full"
    >
      <b>
        Latest event date: 
      </b>
      <span
        class="truncate text-right"
      >
        2020-02-02 02:00:00
      </span>
    </div>
    <div
      class="latest-event-type gap-2 grid grid-columns-manual justify-between w-full"
    >
      <b>
        Latest event type: 
      </b>
      <span
        class="truncate text-right"
      >
        Test
      </span>
    </div>
    <div
      class="latest-event-repo gap-2 grid grid-columns-manual justify-between w-full"
    >
      <b>
        Latest event repo: 
      </b>
      <a
        class="link truncate text-right"
        href="https://github.com/test/test"
        target="_blank"
      >
        test/test
      </a>
    </div>
  </div>
</div>
`;

exports[`ActivityItem.vue renders when latest event is missing 1`] = `
<div
  class="activity-item"
>
  <img
    class="avatar"
    src="Avatar"
  />
  <div
    class="member-login flex font-bold items-center justify-start text-xl"
  >
    <a
      class="link"
      href="https://github.com/Login"
      target="_blank"
    >
      Login
    </a>
  </div>
  <div
    class="latest-event-container"
  >
    <div
      class="latest-event-date gap-2 grid grid-columns-manual justify-between w-full"
    >
      <b>
        Latest event date: 
      </b>
      <span
        class="truncate text-right"
      >
        N/A
      </span>
    </div>
    <div
      class="latest-event-type gap-2 grid grid-columns-manual justify-between w-full"
    >
      <b>
        Latest event type: 
      </b>
      <span
        class="truncate text-right"
      >
        N/A
      </span>
    </div>
    <div
      class="latest-event-repo gap-2 grid grid-columns-manual justify-between w-full"
    >
      <b>
        Latest event repo: 
      </b>
      <span
        class="truncate text-right"
      >
        N/A
      </span>
    </div>
  </div>
</div>
`;
